Fixed gap above header.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -78,6 +78,7 @@
 .header {
   background-color: rgb(0, 0, 0);
   width: 100%;
+  padding: 0.1rem 0;
 
   &__text {
     color: rgb(253, 253, 253);
